Add an updateAll endpoint
