# public/openapi.yaml
@@ -429,3 +429,59 @@ paths:
           description: Method not allowed
         '500':
           description: Internal server error
+
+  /api/updateAll:
+    post:
+      operationId: updateAll
+      summary: >-
+        Update a file in the user's directory by performing a search-and-replace operation. This operation updates all occurrences of the matched string. Confirm before you proceed.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                filePath:
+                  type: string
+                  description: The path of the file to update
+                searchString:
+                  type: string
+                  description: The string to search for in the file
+                replacementString:
+                  type: string
+                  description: The string to replace the search string with
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: A success message or an error message, if applicable
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: An error message
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: An error message
+                  error:
+                    type: string
+                    description: A detailed error message
